create users(handler, service, repo, schema) and update code book
