# server.go
@@ -15,11 +15,21 @@ import (
 func main() {
 	r := gin.New()
 
+	// Database Connection
 	db := utils.DatabaseConn()
 
-	bookRepository := repository.NewRepository(db)
-	bookService := services.NewService(bookRepository)
+	// Migration
+	utils.DatabaseMigration(db)
+
+	rGlobal := repository.NewRepository(db)
+
+	// Book instance
+	bookService := services.BookNewService(rGlobal)
 	bookHandler := handlers.NewBookHandler(bookService)
+
+	// User instance
+	userService := services.UserNewService(rGlobal)
+	userHandler := handlers.NewUserHandler(userService)
 
 	// Documenting Swagger
 	docs.SwaggerInfo.BasePath = "/api/v1"
@@ -37,6 +47,11 @@ func main() {
 			grbook.GET("/:id", bookHandler.FindByIDBookHandler)
 			grbook.PUT("/:id", bookHandler.UpdateBookHandler)
 			grbook.POST("", bookHandler.PostBookHandler)
+		}
+		gruser := v1.Group("/users")
+		{
+			gruser.GET("/:id", userHandler.FindUserByIdHandler)
+			gruser.POST("", userHandler.CreateUserHandler)
 		}
 	}
 
